// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseSummary with multiple expense correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing  
      <span>
        23
      </span>
       
      expenses
        totaling  
      <span>
        $2,503.20
      </span>
      .
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        activeClassName="is-active"
        className="button"
        exact={true}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseSummary with one expense correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing  
      <span>
        1
      </span>
       
      expense
        totaling  
      <span>
        $13.00
      </span>
      .
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        activeClassName="is-active"
        className="button"
        exact={true}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
